Update and rearrange current activities; add/adjust some formatting and styles.

--- a/index.html
+++ b/index.html
@@ -138,96 +138,8 @@
             <p>I am currently helping organizations integrate novel technologies into real-world infrastructure in the areas of cryptography, data science, and formal methods.</p>
 
             <fieldset>
-              <legend>VP, Engineering &amp; Applied Cryptography<br/><a href="https://magnite.com">Magnite</a>
-                <span>
-                  [
-                  <a href="https://github.com/MagniteEngineering"><i class="fab fa-github"></i></a>
-                  <span>|</span>
-                  <a href="https://linkedin.com/company/magnite"><i class="fab fa-linkedin"></i></a>
-                  <span>|</span>
-                  <a href="https://x.com/magnite"><i class="fab fa-x-twitter"></i></a>
-                  ]
-                </span>
-              </legend>
-              <p>The advertising platform provider Magnite is introducing and integrating privacy-enhancing technologies such as secure multi-party computation into advertising technology infrastructure and services.</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Member &amp; Technical Committee Chair, Board of Directors<br/><a href="https://mpcalliance.org">MPC Alliance</a>
-                <span>
-                  [
-                  <a href="https://github.com/mpc-alliance"><i class="fab fa-github"></i></a>
-                  <span>|</span>
-                  <a href="https://linkedin.com/company/mpc-alliance"><i class="fab fa-linkedin"></i></a>
-                  <span>|</span>
-                  <a href="https://x.com/mpcalliance"><i class="fab fa-x-twitter"></i></a>
-                  ]
-                </span>
-              </legend>
-              <p>The MPC Alliance is a consortium of both early-stage and large organizations that are working together to accelerate awareness, acceptance, and adoption of secure multi-party computation (MPC) technologies.</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Contributor<br/><a href="https://iabtechlab.com">IAB Tech Lab</a>
-                <span>
-                  [
-                  <a href="https://github.com/iabtechlab"><i class="fab fa-github"></i></a>
-                  <span>|</span>
-                  <a href="https://linkedin.com/company/iabtechlab"><i class="fab fa-linkedin"></i></a>
-                  ]
-                </span>
-              </legend>
-              <p>The IAB Tech Lab is a non-profit research and development consortium that produces standards, software, and services for the digital advertising industry (including <a href="https://iabtechlab.com/pets/">those that leverage privacy-enhancing technologies</a>).</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Member, Halo Industry Technical Advisory Group<br/><a href="https://wfanet.org/">World Federation of Advertisers</a>
-                <span>
-                  [
-                  <a href="https://github.com/world-federation-of-advertisers"><i class="fab fa-github"></i></a>
-                  <span>|</span>
-                  <a href="https://linkedin.com/company/wfa"><i class="fab fa-linkedin"></i></a>
-                  ]
-                </span>
-              </legend>
-              <p>The World Federation of Advertisers (WFA) is a peer-to-peer network of brands and advertising associations collaborating on technology initiatives (such as <a href="https://wfanet.org/leadership/cross-media-measurement">privacy-preserving cross-media measurement</a> infrastructures).</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Chief Science Officer &amp; Co-Founder<br/><a href="https://nthparty.com">Nth Party, Ltd.</a>
-                <span>
-                  [
-                  <a href="https://github.com/nthparty"><i class="fab fa-github"></i></a>
-                  <span>|</span>
-                  <a href="https://linkedin.com/company/nth-party"><i class="fab fa-linkedin"></i></a>
-                  <span>|</span>
-                  <a href="https://medium.com/nthparty"><i class="fab fa-medium"></i></a>
-                  <span>|</span>
-                  <a href="https://x.com/@nthparty"><i class="fab fa-x-twitter"></i></a>
-                  ]
-                </span>
-                (acquired by <a href="https://magnite.com">Magnite</a>)
-              </legend>
-              <p>Nth Party builds and deploys next-generation privacy-enhancing solutions across a number of verticals while contributing to open-source secure multi-party computation frameworks and standards.</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Principal<br/><a href="https://reity.org">Reity LLC</a>
-                <span>
-                  [
-                  <a href="https://github.com/reity"><i class="fab fa-github"></i></a>
-                  <span>|</span>
-                  <a href="https://linkedin.com/company/reity"><i class="fab fa-linkedin"></i></a>
-                  <span>|</span>
-                  <a href="https://medium.com/reity-llc"><i class="fab fa-medium"></i></a>
-                  ]
-                </span>
-              </legend>
-              <p>Reity provides consulting services and other forms of assistance to organizations and initiatives that work at the boundaries between computer science research efforts and their practical applications and impacts.</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Chief Science Officer &amp; Co-Founder<br/><a href="https://choosek.com">Choose K Corp.</a>
+              <legend>Chief Science Officer &amp; Co-Founder
+                <br/><a href="https://choosek.com">Choose K Corp.</a>
                 <span>
                   [
                   <a href="https://github.com/choosek"><i class="fab fa-github"></i></a>
@@ -242,10 +154,11 @@
             </fieldset>
 
             <fieldset>
-              <legend>Technical Advisor<br/><a href="https://nillion.com">Nillion</a>
+              <legend>Chief Technology Officer
+                <br/><a href="https://nillion.com">Nillion</a>
                 <span>
                   [
-                  <a href="https://github.com/nillion-oss"><i class="fab fa-github"></i></a>
+                  <a href="https://github.com/nillionnetwork"><i class="fab fa-github"></i></a>
                   <span>|</span>
                   <a href="https://linkedin.com/company/nillionnetwork"><i class="fab fa-linkedin"></i></a>
                   <span>|</span>
@@ -253,7 +166,104 @@
                   ]
                 </span>
               </legend>
-              <p>Nillion is a secure computation network that decentralizes trust for high-value data.</p>
+              <p>Nillion builds and maintains a secure computation network that enables decentralized workflows involving high-value data.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Principal
+                <br/><a href="https://reity.org">Reity LLC</a>
+                <span>
+                  [
+                  <a href="https://github.com/reity"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/reity"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://medium.com/reity-llc"><i class="fab fa-medium"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>Reity provides consulting services and other forms of assistance to organizations and initiatives that work at the boundaries between computer science research efforts and their practical applications and impacts.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Member &amp; Technical Committee Chair, Board of Directors
+                <br/><a href="https://mpcalliance.org">MPC Alliance</a>
+                <span>
+                  [
+                  <a href="https://github.com/mpc-alliance"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/mpc-alliance"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://x.com/mpcalliance"><i class="fab fa-x-twitter"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The MPC Alliance is a consortium of both early-stage and large organizations that are working together to accelerate awareness, acceptance, and adoption of secure multi-party computation (MPC) technologies.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Contributor
+                <br/><a href="https://iabtechlab.com">IAB Tech Lab</a>
+                <span>
+                  [
+                  <a href="https://github.com/iabtechlab"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/iabtechlab"><i class="fab fa-linkedin"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The IAB Tech Lab is a non-profit research and development consortium that produces standards, software, and services for the digital advertising industry (including <a href="https://iabtechlab.com/pets/">those that leverage privacy-enhancing technologies</a>).</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Member, Halo Industry Technical Advisory Group
+                <br/><a href="https://wfanet.org/">World Federation of Advertisers</a>
+                <span>
+                  [
+                  <a href="https://github.com/world-federation-of-advertisers"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/wfa"><i class="fab fa-linkedin"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The World Federation of Advertisers (WFA) is a peer-to-peer network of brands and advertising associations collaborating on technology initiatives (such as <a href="https://wfanet.org/leadership/cross-media-measurement">privacy-preserving cross-media measurement</a> infrastructures).</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>VP, Engineering &amp; Applied Cryptography
+                <i>January 2022 &mdash; June 2024</i>
+                <a href="https://magnite.com">Magnite</a>
+                <span>
+                  [
+                  <a href="https://github.com/MagniteEngineering"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/magnite"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://x.com/magnite"><i class="fab fa-x-twitter"></i></a>
+                  ]
+                </span>
+              </legend>
+              <p>The advertising platform provider Magnite incorporated novel cryptographic techniques into large-scale advertising technology infrastructure and services.</p>
+            </fieldset>
+
+            <fieldset>
+              <legend>Chief Science Officer &amp; Co-Founder
+                <i>October 2019 &mdash; December 2021</i>
+                <a href="https://nthparty.com">Nth Party, Ltd.</a> (acquired by <a href="https://magnite.com">Magnite</a>)
+                <span>
+                  [
+                  <a href="https://github.com/nthparty"><i class="fab fa-github"></i></a>
+                  <span>|</span>
+                  <a href="https://linkedin.com/company/nth-party"><i class="fab fa-linkedin"></i></a>
+                  <span>|</span>
+                  <a href="https://medium.com/nthparty"><i class="fab fa-medium"></i></a>
+                  <span>|</span>
+                  <a href="https://x.com/@nthparty"><i class="fab fa-x-twitter"></i></a>
+                  ]
+                </span>
+                
+              </legend>
+              <p>Nth Party adapted secure multi-party computation protocols within a number of verticals and contributed to open-source frameworks and standards.</p>
             </fieldset>
           </div>
 
